cors update config